--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 tests/**/coverage/
 
 packages/components/dist/*
+packages/components/coverage/*
 
 # Editor directories and files
 .idea
