--- a/docs/package.json
+++ b/docs/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vitepress dev docs --port 9999",
-    "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "docs:dev": "vitepress dev . --port 9999",
+    "docs:build": "vitepress build .",
+    "docs:serve": "vitepress serve ."
   },
   "keywords": [],
   "author": "yummyMao",
   "license": "ISC",
-  "devDependencies": {
-    "vitepress": "1.0.0-alpha.4"
-  },
   "dependencies": {
-    "imm-ui": "workspace:^1.0.0"
+    "imm-ui": "workspace:*"
+  },
+  "devDependencies": {
+    "vitepress": "1.0.0-alpha.8"
   }
 }
