--- a/examples/package.json
+++ b/examples/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "sass": "^1.54.4"
+  },
   "dependencies": {
-    "imm-ui": "workspace:^1.0.0"
+    "imm-ui": "workspace:*"
   }
 }
