--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "docs:dev": "vitepress dev . --port 9999",
     "docs:build": "vitepress build .",
-    "docs:serve": "vitepress serve ."
+    "docs:serve": "vitepress serve .",
+    "register:components": "vitepress-rc"
   },
   "keywords": [],
   "author": "yummyMao",
@@ -15,6 +16,7 @@
     "imm-ui": "workspace:*"
   },
   "devDependencies": {
-    "vitepress": "1.0.0-alpha.8"
+    "vitepress": "1.0.0-alpha.8",
+    "vitepress-theme-demoblock": "^1.4.2"
   }
 }
