feat: 加入埋点上报插件

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -16,6 +16,7 @@
     "imm-ui",
     "vue3组件库"
   ],
+  "author": "yummyMao",
   "license": "MIT",
   "typings": "lib/index.d.ts",
   "dependencies": {
