--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "vite-plugin-dts": "^1.4.0",
     "vitest": "^0.22.1",
     "vue": "^3.2.36"
+  },
+  "dependencies": {
+    "@vue/reactivity": "^3.2.37"
   }
 }
