feat: 加入link文档介绍

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vite build",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [],
   "author": "yummyMao",
-  "license": "MIT"
+  "license": "MIT",
+  "typings": "lib/index.d.ts"
 }
