--- a/docs/package.json
+++ b/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "site",
+  "name": "docs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,11 +12,11 @@
   "keywords": [],
   "author": "yummyMao",
   "license": "ISC",
-  "dependencies": {
-    "imm-ui": "workspace:*"
-  },
   "devDependencies": {
     "vitepress": "1.0.0-alpha.8",
     "vitepress-theme-demoblock": "^1.4.2"
+  },
+  "dependencies": {
+    "imm-ui": "workspace:^1.0.0"
   }
 }
