--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-tests/**/coverage/
 
-packages/components/dist/*
-packages/components/coverage/*
+coverage
+**/es
+**/lib
 
 # Editor directories and files
 .idea
