--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:imm": "gulp -f packages/components/script/build/gulpfile.ts",
-    "publish:imm": "gulp -f packages/components/script/publish/gulpfile.ts",
+    "publish:imm": "pnpm run --filter ./packages/components/imm-ui release",
     "docs:dev": "pnpm run --filter ./docs docs:dev",
     "docs:build": "pnpm run --filter ./docs docs:build",
     "docs:serve": "pnpm run --filter ./docs docs:serve",
@@ -17,6 +17,7 @@
   "author": "yummyMao",
   "license": "ISC",
   "devDependencies": {
+    "@release-it/conventional-changelog": "^5.1.1",
     "@types/gulp": "^4.0.9",
     "@types/gulp-autoprefixer": "^0.0.33",
     "@types/gulp-less": "^0.0.32",
@@ -31,6 +32,7 @@
     "gulp-less": "^5.0.0",
     "happy-dom": "^6.0.4",
     "less": "^4.1.3",
+    "release-it": "^15.5.0",
     "sucrase": "^3.25.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.3",
