ci: 修改release-it配置

--- a/packages/components/imm-ui/package.json
+++ b/packages/components/imm-ui/package.json
@@ -10,6 +10,10 @@
   "scripts": {
     "release": "release-it"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://e.coding.net/yummy1/cicd/imm-ui.git"
+  },
   "keywords": [
     "imm-ui",
     "vue3组件库"
