--- a/examples/package.json
+++ b/examples/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@imm-ui/tracking": "workspace:^1.0.0",
+    "@imm-ui/utils": "workspace:^1.0.0",
     "imm-ui": "workspace:^1.0.0"
   }
 }
