--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vitepress dev . --port 9999",
+    "docs:dev": "vitepress dev . --host --port 9999",
     "docs:build": "vitepress build .",
     "docs:serve": "vitepress serve .",
     "register:components": "vitepress-rc"
