--- a/examples/package.json
+++ b/examples/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite --host"
   },
   "keywords": [],
   "author": "",
