--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - lts/*
+branches:
+  only:
+    - master    # 构建的分支
 install:
   - pnpm install
 script:
@@ -9,8 +12,9 @@ deploy:
   provider: pages
   skip_cleanup: true
   local_dir: docs/.vitepress/dist
+  target-branch: gh-pages
   # 在 GitHub 中生成，用于允许 Travis 向你的仓库推送代码。在 Travis 的项目设置页面进行配置，设置为 secure variable
-  github_token: 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
+  github_token: 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
   keep_history: true
   on:
     branch: master
