--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ deploy:
   local_dir: docs/.vitepress/dist
   target-branch: gh-pages
   # 在 GitHub 中生成，用于允许 Travis 向你的仓库推送代码。在 Travis 的项目设置页面进行配置，设置为 secure variable
-  github_token: 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
+  github_token: $GITHUB_TOKEN
   keep_history: true
   on:
     branch: master
