--- a/.github/workflow/gh-pages.yml
+++ b/.github/workflow/gh-pages.yml
@@ -29,22 +29,22 @@ jobs:
           node-version: '16.x'
           cache: 'pnpm'
 
-      # 安装依赖项
-      - name: Install
-        run: pnpm i
-
-      # 打包组件
-      - name: Build Docs
-        run: pnpm run docs:build
+      # 发布pages
+      - name: Build And Publish Docs
+        run: |
+          pnpm i
+          pnpm run docs:build
+          cd .vitepress/dist
+          touch .nojekyll
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git init
+          git add -A
+          git commit -m autobuild
+          git push -f https://$GITHUB_ACTOR:${{secrets.GITHUB_TOKEN}}@github.com/$GITHUB_REPOSITORY.git master:gh-pages
 
       # 向 Codecov 报告覆盖率
       - name: Report coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/.vitepress/dist
