--- a/.github/workflow/gh-pages.yml
+++ b/.github/workflow/gh-pages.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install SSH Client
           uses: webfactory/ssh-agent@v0.2.0 # This step installs the ssh client into the workflow run. There's many options available for this on the action marketplace.
           with:
-            ssh-private-key: ${{ secrets.IMMUI }}
+            ssh-private-key: ${{ secrets.DEPLOY_KEY }}
       # 发布pages
       - name: Build and Deploy Repo
         uses: JamesIves/github-pages-deploy-action@releases/v3-test
