--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -32,8 +32,9 @@ jobs:
       - name: Install
           run: pnpm install
 
+      # This step installs the ssh client into the workflow run. There's many options available for this on the action marketplace.
       - name: Install SSH Client
-          uses: webfactory/ssh-agent@v0.2.0 # This step installs the ssh client into the workflow run. There's many options available for this on the action marketplace.
+          uses: webfactory/ssh-agent@v0.2.0
           with:
             ssh-private-key: ${{ secrets.DEPLOY_KEY }}
       # 发布pages
