--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "publish:imm": "pnpm run --filter ./packages/components/imm-ui release",
     "docs:dev": "pnpm run --filter ./docs docs:dev",
     "docs:build": "pnpm run --filter ./docs docs:build",
+    "docs:serve": "pnpm run --filter ./docs docs:serve",
     "examples:dev": "pnpm run --filter ./examples dev",
     "test": "pnpm run --filter ./packages/components test",
     "coverage": "pnpm run --filter ./packages/components coverage"
