feat: 修改打包问题

--- a/packages/components/imm-ui/package.json
+++ b/packages/components/imm-ui/package.json
@@ -19,7 +19,10 @@
     "vue3组件库"
   ],
   "dependencies": {
-    "@imm-ui/utils": "workspace:^1.0.0"
+    "@imm-ui/utils": "1.0.0"
+  },
+  "devDependencies": {
+    "release-it": "^15.5.0"
   },
   "author": "yummyMao",
   "license": "MIT",
