--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "module": "./index.ts",
   "scripts": {
     "build": "vite build",
     "test": "vitest",
@@ -13,6 +14,5 @@
   ],
   "keywords": [],
   "author": "yummyMao",
-  "license": "MIT",
-  "typings": "lib/index.d.ts"
+  "license": "MIT"
 }
