--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/gulp": "^4.0.9",
     "@types/gulp-autoprefixer": "^0.0.33",
     "@types/gulp-less": "^0.0.32",
+    "@types/gulp-sass": "^5.0.1",
     "@types/less": "^3.0.3",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vitest/coverage-c8": "^0.22.1",
@@ -29,7 +30,9 @@
     "fast-glob": "^3.2.11",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-cssmin": "^0.2.0",
     "gulp-less": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "happy-dom": "^6.0.4",
     "less": "^4.1.3",
     "release-it": "^15.5.0",
