--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@imm-ui/utils",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "",
-  "main": "./index.ts",
-  "module": "./index.ts",
+  "main": "dist/lib/index.js",
+  "module": "dist/es/index.js",
   "scripts": {
     "build": "vite build",
     "test": "vitest",
