--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docs:serve": "pnpm run --filter ./docs docs:serve",
     "examples:dev": "pnpm run --filter ./examples dev",
     "utils:build": "pnpm run --filter ./packages/utils build",
-    "publish:build": "pnpm run --filter ./packages/utils publish",
+    "utils:publish": "pnpm run --filter ./packages/utils publish",
     "test": "pnpm run --filter ./packages/components test",
     "coverage": "pnpm run --filter ./packages/components coverage"
   },
