--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "vite build",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "publish": "npm publish"
   },
   "files": [
     "dist"
