--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install SSH Client
           uses: webfactory/ssh-agent@v0.2.0
           with:
-            ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+            ssh-private-key: ${{ secrets.IMMUI }}
       # 发布pages
       - name: Build and Deploy Repo
         uses: JamesIves/github-pages-deploy-action@releases/v3-test
