--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-          cache: 'pnpm'
+          # cache: 'pnpm'
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       # 安装 pnpm
       - name: Setup pnpm
