--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
         env:
           SSH_AUTH_SOCK: /tmp/ssh-auth.sock
-      # 发布pages
+      # 发布page
       - name: Build and Deploy Repo
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
