--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,8 +38,8 @@ jobs:
         uses: webfactory/ssh-agent@v0.4.1
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-        env:
-          SSH_AUTH_SOCK: /tmp/ssh-auth.sock
+        #env:
+          #SSH_AUTH_SOCK: /tmp/ssh-auth.sock
       # 发布page
       - name: Build and Deploy Repo
         uses: JamesIves/github-pages-deploy-action@releases/v4
