--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Install
         run: pnpm install
+      - name: Build
+        run: pnpm run docs:build
       # This step installs the ssh client into the workflows run. There's many options available for this on the action marketplace.
       - name: Install SSH Client
         uses: webfactory/ssh-agent@v0.4.1
