--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,6 @@ jobs:
         with:
           BASE_BRANCH: master
           BRANCH: gh-pages
-          FOLDER: docs/.vitepress/dist
+          FOLDER: docs/docs/.vitepress/dist
           SSH: true # SSH must be set to true so the deploy action knows which protocol to deploy with.
 
